<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bno055</name>
  <version>0.5.0</version>
  <description>Bosch BNO055 IMU driver for ROS2</description>
  <maintainer email="evanflynn.msu@gmail.com">flynneva</maintainer>
  <license>BSD</license>

  <!-- Dependency Management -->

  <!-- Build dependencies for C++ -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- C++ ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>example_interfaces</depend>
  
  <!-- For serial UART communication : -->
  <depend>python3-serial</depend>
  <depend>python3-smbus</depend>
  
  <!--ROS Client Libraries for Python (for legacy Python node):-->
  <exec_depend>rclpy</exec_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
 
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
